Styling has been applied

--- a/recipes/Dosa.html
+++ b/recipes/Dosa.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dishes</title>
+    <link rel="stylesheet" href="../styles.css"/>
 </head>
 <body>
     <h1>Dosa</h1>
-    <img src="../download.jpeg" alt="Dosa">
+    <div id="image"><img src="../download.jpeg" alt="Dosa"></div>
     <h3>Description</h3>
     <p>A dosa is a thin savory pancake in South Indian cuisine made from a fermented batter of ground black lentils and rice</p>
-    <h4>Ingredients</h4>
+    <h4 class="mh">Ingredients</h4>
     <ul>
         <li>Rice batter</li>
         <li>Baking Soda</li>
     </ul>
-    <h4>Steps to follow</h4>
+    <h4 class="mh">Steps to follow</h4>
     <ol>
         <li>Add prepared dosa batter on tawa</li>
         <li>Spread the batter</li>
