Changes in alignment and image

--- a/recipes/Dosa.html
+++ b/recipes/Dosa.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Dosa</h1>
-    <div id="image"><img src="../download.jpeg" alt="Dosa"></div>
+    <img src="../Plain-Dosa.jpg" alt="Dosa">
     <h3>Description</h3>
     <p>A dosa is a thin savory pancake in South Indian cuisine made from a fermented batter of ground black lentils and rice</p>
     <h4 class="mh">Ingredients</h4>
