link has been resized

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/Dosa.html">Dosa</a>
+    <a href="recipes/Dosa.html"><h2>Dosa</h2></a>
 </body>
 </html>
